# kuka_hardware

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
joint_trajectory_action_controller/: CMakeLists.txt  package.xml
joint_trajectory_action_controller/include/: TrajectoryActionClient.hpp  follow_joint_trajectory_action.hpp
joint_trajectory_action_controller/src/: follow_joint_trajectory_action.cpp  main_follow_joint_trajectory_action.cpp
kuka_kr6_support/: CMakeLists.txt  package.xml
kuka_kr6_support/config/: kuka_kr6r900sixx_controllers.yaml  model.rviz
kuka_kr6_support/launch/: test_kr6r900sixx.launch  test_kr6r900sixx.launch.py
kuka_kr6_support/urdf/: kr6r900sixx.ros2_control.xacro  kr6r900sixx.urdf  kr6r900sixx.xacro
kuka_resources/: CMakeLists.txt  package.xml
kuka_rsi_hardware/: CMakeLists.txt  kuka_rsi_hardware.xml  package.xml
kuka_rsi_hardware/include/kuka_rsi_hardware/: kuka_rsi_hardware.hpp  rsi_command.h  udp_server.h
kuka_rsi_hardware/src/: kuka_rsi_hardware.cpp
kuka_rsi_hw_interface/: CMakeLists.txt  kuka_rsi_hardware.xml  package.xml
kuka_rsi_hw_interface/config/: ros2_controllers.yaml
kuka_rsi_hw_interface/include/kuka_rsi_hardware/: kuka_rsi_hardware.hpp  rsi_state.h  visibility_control.h
kuka_rsi_hw_interface/src/: kuka_rsi_hardware.cpp  kuka_rsi_hardware_node.cpp
kuka_rsi_simulator/: package.xml  setup.cfg  setup.py
kuka_rsi_simulator/kuka_rsi_simulator/: follow_joint_trajectory_action_client.py  joint_state_publisher.py  joint_trajectory_publisher.py  kuka_rsi_simulator.py
